first blog post

--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<article>
   <header>
-    <h1>A heading here</h1>
-    <p>Posted by John Doe</p>
-    <p>Some additional information here</p>
+        <h1>My First Blog and the Challenges Setting the Blog up.</h1>
   </header>
-  <p>Lorem Ipsum dolor set amet....</p>
-</article>
+  <br>
+
+  <body>
+    <p>This week I mostly just learned the basics about HTML coding. As someone who has never used HTML or any web
+      development languages this was VERY new to me.
+      It was also quite jarring “coding” in HTML, as HTML is completely different from traditional programming, as you
+      use tags to manipulate text and embed images into your text.
+      I also learned how to create tables and create forms or login points for a web page. </p>
+    <p>I also learned about what it takes to set up a server, which to me seemed very difficult even though many of my older friends talk about setting up servers like it's nothing. 
+      The most difficult part for me was setting up apache and getting my repository on my server and actually being able to see my HTML code (like you are right now). 
+      I only learned how to do this from Dr. Johnsons write up and help after class. <a href="https://twodee.org/blog/18127">Link to the write up.</a>.</p>
+  </body>
+
+  <body>
+    <p>Examples of the things I learned how to do in HTML.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/en/b/bb/Machine_Gun_Kelly_-_Tickets_to_My_Downfall.png" >
+    <p>This is an example of adding images to a web page and also my current favorite album by Machine Gun Kelly. I will also be seeing him in person on the 28th of October.</p>
+    <br>
+    <p>This is a simple form can really do anything with the submitted information but I will soon...</p>
+    <form action="/action_page.php">
+      <label for="yourname">First name:</label><br>
+      <input type="text" id="yourname" name="yourname"><br>
+      <label for="lastname">Last name:</label><br>
+      <input type="text" id="lastname" name="lname"><br><br>
+      <input type="submit" value="Submit">
+    </form> 
+
+    <p>This is a code snippet of what to do for a table in HTML.</p>
+    <pre>
+      &lt;tr>
+        &lt;td>Emil</td>
+        &lt;td>Tobias</td>
+        &lt;td>Linus</td>
+        &lt;/tr>
+    </pre>
+  </body>
+  <footer>
+    <p>I forgot to mention it but I also know how to do footers. Hopefully this was enough I am still a little confused about what you really wanted in this blog.</p>
+  </footer>
 
 </body>
+
 </html>
