--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
   <header>
-        <h1>My First Blog and the Challenges Setting the Blog up.</h1>
+    <h1>My First Blog and the Challenges Setting up the Blog</h1>
   </header>
   <br>
 
