--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <h1>List of all of my blogs:</h1>
-  <p href="home\mcclasjw\blog-McClasjw\blog-01.html">Blog-01</p>
+  <body>
+    <h1>List of all of my blogs:</h1>
+    <p href="home\mcclasjw\blog-McClasjw\blog-01.html">Blog-01</p>
+  </body>
 </html>
