adding second blog and hopefully the linking works

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <body>
     <h1>List of all of my blogs:</h1>
-    <p href="home\mcclasjw\blog-McClasjw\blog-01.html">Blog-01</p>
+    <ul>
+      <li href="blog-01.html">Blog-01</li><dd>September 3, 2021</dd>
+    </ul>
+
   </body>
 </html>
