--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <h1>List of all of my blogs:</h1>
     <ul>
-      <li href="blog-01.html">Blog-01</li><dd>September 3, 2021</dd>
+      <li><a href="blog-01.html">Blog-01</a></li><dd>September 3, 2021</dd>
     </ul>
 
   </body>
