setup for the next blog post

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="index.css">
   <body>
-    <h1>List of all of my blogs:</h1>
+    <h1>Jacob's blog posts:</h1>
     <ul>
-      <li><a href="blog-01.html">Blog-01</a></li><dd>September 3, 2021</dd>
+      <li><a href="blog-01.html">Blog-01:</a></li><dd>September 3, 2021</dd>
+      <li><a href="blog-02.html">Blog-02:</a></li><dd>September 10, 2021</dd>
     </ul>
 
   </body>
