--- a/blog-03.html
+++ b/blog-03.html
@@ -8,9 +8,9 @@
 
     <p>This week we continued to hone our skills in CSS and work on our ability to manipulate divs with flex. This blog
         I wanted to go back to learn more about image manipulation with CSS. I found a very helpful w3schoolssite that
-        shows a bunch of cool effects you can do with CSS found </p>
-    <p><a href-"https://www.w3schools.com/css/css3_images.asp">here.</a></p>
-    <p>
+        shows a bunch of cool effects you can do with CSS found <a
+            href="https://www.w3schools.com/css/css3_images.asp">here.</a>
+
         This is a very helpful article that shows some new (too me) effects you can add to images with CSS. Some
         of the styles they demonstrated are about changing the opacity, making effects happen over images as you hover
         over them, and grey
