--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <li><a href="blog-01.html">Blog-01:</a></li><dd>September 3, 2021</dd>
       <li><a href="blog-02.html">Blog-02:</a></li><dd>September 10, 2021</dd>
       <li><a href="blog-03.html">Blog-03:</a></li><dd>September 16, 2021</dd>
+      <li><a href="blog-04.html">Blog-04:</a></li><dd>September 23, 2021</dd>
     </ul>
 
   </body>
