--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <li><a href="blog-02.html">Blog-02:</a></li><dd>September 10, 2021</dd>
       <li><a href="blog-03.html">Blog-03:</a></li><dd>September 16, 2021</dd>
       <li><a href="blog-04.html">Blog-04:</a></li><dd>September 23, 2021</dd>
+      <li><a href="blog-05.html">Blog-05:</a></li><dd>October 7, 2021</dd>
     </ul>
 
   </body>
