--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="blog-05.html">Blog-05:</a></li><dd>October 7, 2021</dd>
       <li><a href="blog-06.html">Blog-06:</a></li><dd>October 14, 2021</dd>
       <li><a href="blog-07.html">Blog-07:</a></li><dd>November 4, 2021</dd>
+      <li><a href="blog-08.html">Blog-08:</a></li><dd>November 11, 2021</dd>
     </ul>
 
   </body>
