final blog post

--- a/blog-08.html
+++ b/blog-08.html
@@ -12,7 +12,7 @@
         <a href="https://www.w3schools.com/REACT/react_usereducer.asp">here</a>.
     </p>
     <p>
-        The useReducer is as i have read similar to the reading and redux, where you can keep track of multiple states with one state instead of having multiple like in Lab 19.
+        The useReducer is as I have read similar to the reading and redux, where you can keep track of multiple states with one state instead of having multiple like in Lab 19.
         UseReducer has a similar setup to useState, but instead of having the one initial state, you also pass a reducer object and initial state.
         Sadly the article does not have a lot of explaination for the code and why they are doing what they are doing, but 
         as I am slowly understanding from the code given is that when somthing in the App (Todos in the code) the onChange field we call a fucntion handleComplete which passes arguments to our reducer function.
